# gps

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  BOOKMARKS.md  CONTRIBUTING.md  Containerfile  LICENSE  README.md  mcp_server.py  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: ambient.yml  ci.yml  deploy.yml  version.yml
data/: DATA_CATALOG.yaml  acme-component-versions.csv  acme-corp-org.xlsx  acme-feature-planning.csv  acme-issues-export.csv  acme-release-schedule.csv  schema.sql
deploy/: deploy.sh
deploy/k8s/base/: deployment.yaml  kustomization.yaml  namespace.yaml  pvcs.yaml  service.yaml
deploy/k8s/overlays/openshift/: kustomization.yaml  route.yaml
docs/: CUSTOMIZATION.md  DEPLOYMENT.md  QUICKSTART.md  SCHEMA.md
docs/adr/: 001-sqlite-mcp-over-rag.md  002-etl-materialized-db.md  003-transport-security.md
governance/: example-policy.md
scripts/: build_db.py  test.sh
